# Iris2

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  README  configure.ac  installdeps.ubuntu.sh  iris.desktop  iris.doxygen  lib.premake.lua  makeclean.sh  premake.lua  premakelinux.sh  repairmusic.sh  repairmusic.v2.sh  start.sh
lugre/: CMakeLists.txt  COPYING  Makefile.am  lugre.common.dialogs.debian.lenny.patch  premake.lua.dist
lugre/include/: lugre_BorderColourClipPaneOverlay.h  lugre_ColourClipPaneOverlay.h  lugre_ColourClipTextOverlay.h  lugre_CompassOverlay.h  lugre_RobRenderableOverlay.h  lugre_SortedOverlayContainer.h  lugre_beam.h  lugre_bitmask.h  lugre_cadune.h  lugre_caelum.h  lugre_camera.h  lugre_commondialog.h  lugre_crc32.h  lugre_fastbatch.h  lugre_fifo.h  lugre_findpath.h  lugre_game.h  lugre_gfx2D.h  lugre_gfx3D.h  lugre_image.h  lugre_input.h  lugre_listener.h  lugre_luabind.h  lugre_luabind_direct.h  lugre_luabind_ogrehelper.h  lugre_luacallback.h  lugre_luaxml.h  lugre_main.h  lugre_md5.h  lugre_meshbuffer.h  lugre_meshloader.h  lugre_meshshape.h  lugre_net.h  lugre_ode.h  lugre_ogrefonthelper.h  lugre_ogrewrapper.h  lugre_paged_geometry.h  lugre_platform.h  lugre_prefix.h  lugre_profile.h  (+16 more)
lugre/lib/: README
lugre/lib/LuaJIT-1.1.5/mak.vc2005/: LuaJIT-1.1.5.sln  LuaJIT-1.1.5_lib.vcproj
lugre/lib/LuaJIT-1.1.5/mak.vc2008/: LuaJIT-1.1.5.sln  LuaJIT-1.1.5_lib.vcproj
lugre/lib/cadune_tree/: CMakeLists.txt  license.txt  readme.txt
lugre/lib/cadune_tree/docs/: _c_t_parameters_8cpp-source.html  _c_t_parameters_8cpp.html  _c_t_parameters_8h-source.html  _c_t_parameters_8h.html  _c_t_prerequisites_8h-source.html  _c_t_prerequisites_8h.html  _c_t_section_8cpp-source.html  _c_t_section_8cpp.html  _c_t_section_8h-source.html  _c_t_section_8h.html  _c_t_serializer_8cpp-source.html  _c_t_serializer_8cpp.html  _c_t_serializer_8h-source.html  _c_t_serializer_8h.html  _c_t_stem_8cpp-source.html  _c_t_stem_8cpp.html  _c_t_stem_8h-source.html  _c_t_stem_8h.html  _cadune_tree_8h-source.html  _cadune_tree_8h.html  annotated.html  class_cadune_tree_1_1_parameters-members.html  class_cadune_tree_1_1_parameters.html  class_cadune_tree_1_1_section-members.html  class_cadune_tree_1_1_section.html  class_cadune_tree_1_1_serializer-members.html  class_cadune_tree_1_1_serializer.html  class_cadune_tree_1_1_stem-members.html  class_cadune_tree_1_1_stem.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  index.html  namespace_cadune_tree.html  namespace_ogre.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  (+2 more)
lugre/lib/cadune_tree/include/: CTParameters.h  CTPrerequisites.h  (+4 more)
lugre/lib/caelum/: CMakeLists.txt  Contributors.txt  WhatsNew.txt
lugre/lib/lua-5.1.4/: CMakeLists.txt
lugre/lib/md5/: CMakeLists.txt
lugre/lib/paged_geometry/: CMakeLists.txt
lugre/lua/: lib.atlasgroup.lua  lib.beam.lua  lib.box.lua  lib.broadcast.lua  lib.cam.lua  lib.chatline.lua  lib.config.lua  lib.contextmenu.lua  lib.cursor.lua  lib.edittext.lua  lib.fadelines.lua  lib.fifo.lua  lib.filebrowser.lua  lib.glyphlist.lua  lib.gui.font.lua  lib.gui.layout.lua  lib.gui.lua  lib.gui.spritepanel.lua  lib.gui.test.lua  lib.gui.widget.lua  lib.gui.xml.lua  lib.guimaker.lua  lib.guiutils.lua  lib.http.lua  lib.input.lua  lib.irc.lua  lib.job.lua  lib.listener.lua  lib.material.lua  lib.movedialog.lua  lib.netmessage.lua  lib.ode.lua  lib.plaingui.lua  lib.plugin.lua  lib.preview.lua  lib.primitive.lua  lib.prism.lua  lib.profile.lua  lib.registry.lua  lib.simplexml.lua  (+12 more)
lugre/patches/: luajit.patch  shoggoth.patch  uniquename.patch
lugre/src/: lugre_BorderColourClipPaneOverlay.cpp  lugre_ColourClipPaneOverlay.cpp  lugre_ColourClipTextOverlay.cpp  lugre_CompassOverlay.cpp  lugre_RobRenderableOverlay.cpp  lugre_SortedOverlayContainer.cpp  lugre_beam.cpp  lugre_beam_L.cpp  lugre_bitmask.cpp  lugre_bitmask_L.cpp  lugre_cadune_L.cpp  lugre_caelum_L.cpp  lugre_camera_L.cpp  lugre_commondialog.cpp  lugre_fastbatch.cpp  lugre_fifo_L.cpp  lugre_findpath.cpp  lugre_game.cpp  lugre_gfx2D.cpp  lugre_gfx2D_L.cpp  lugre_gfx3D.cpp  lugre_gfx3D_L.cpp  lugre_image_L.cpp  lugre_input.cpp  lugre_listener.cpp  lugre_luabinds_ogre.cpp  lugre_luaxml.cpp  lugre_main.cpp  lugre_material_L.cpp  lugre_md5_L.cpp  lugre_meshbuffer.cpp  lugre_meshbuffer_L.cpp  lugre_meshloader.cpp  lugre_meshshape.cpp  lugre_net.cpp  lugre_net_L.cpp  lugre_ode.cpp  lugre_ode_L.cpp  lugre_ogrewrapper.cpp  lugre_paged_geometry_L.cpp  (+28 more)
lugre/tolua/: lex.yy.c  notes.txt  run.sh  test1.h  test2.h  tolua.lex  tolua.php
lugre/widgets/: lib.gui.widget.alignbox.lua  lib.gui.widget.bar.lua  lib.gui.widget.border.lua  lib.gui.widget.button.lua  lib.gui.widget.dropdownmenu.lua  lib.gui.widget.dummy.lua  lib.gui.widget.edittext.lua  lib.gui.widget.group.lua  lib.gui.widget.hbox.lua  lib.gui.widget.image.lua  lib.gui.widget.layer.lua  lib.gui.widget.linelist.lua  lib.gui.widget.list.lua  lib.gui.widget.menu.lua  lib.gui.widget.pagelist.lua  lib.gui.widget.pane.lua  lib.gui.widget.radiobutton.lua  lib.gui.widget.root.lua  lib.gui.widget.scrollbar.lua  lib.gui.widget.scrollpane.lua  lib.gui.widget.slider.lua  lib.gui.widget.spritepanel.lua  lib.gui.widget.table.lua  lib.gui.widget.tabpane.lua  lib.gui.widget.text.lua  lib.gui.widget.tooltip.lua  lib.gui.widget.vbox.lua  lib.gui.widget.window.lua
src/: CMakeLists.txt  Makefile.am  builder_L.cpp  data.cpp  data_L.cpp  data_anim.cpp  data_anim_L.cpp  data_artmap.cpp  data_artmap_L.cpp  data_common.cpp  data_font.cpp  data_font_L.cpp  data_groundblock.cpp  data_groundblock_L.cpp  data_gump.cpp  data_gump_L.cpp  data_hue.cpp  data_hue_L.cpp  data_light.cpp  data_lookupfile.cpp  data_map.cpp  data_mapinfo.cpp  data_multi.cpp  data_multi_L.cpp  data_radar.cpp  data_radar_L.cpp  data_sound.cpp  data_sound_L.cpp  data_staticblock.cpp  data_staticblock_L.cpp  data_texmap.cpp  data_texmap_L.cpp  data_tiletype.cpp  data_tiletype_L.cpp  granny_L.cpp  grannydump.cpp  grannyloader_i2.cpp  grannyogreloader.cpp  grannyparser.cpp  huffman.cpp  (+9 more)
(+3227 files in other folders)
