ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lib/cadune_tree)
IF(NOT USE_SYSTEM_LUA)
	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lib/lua-5.1.4)
	add_library(lugrelua ALIAS lua)
ENDIF(NOT USE_SYSTEM_LUA)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lib/caelum)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lib/md5)


FILE(GLOB sourceFiles RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
INCLUDE_DIRECTORIES(
	${MYLUGRE_INCLUDES}
	${PKGOGRE_INCLUDE_DIRS}
)
ADD_DEFINITIONS(
	${PKGOGRE_CFLAGS_OTHER}
	${PKGlua_CFLAGS_OTHER}
	${MYGLOBAL_LUGRE_DEFINES}
	${MYGLOBAL_ALL_DEFINES}
	-DUSE_LUGRE_LIB_MD5
	-DUSE_LUGRE_LIB_CADUNE_TREE
	-DUSE_LUGRE_LIB_CAELUM
)

IF(PKGopenal_FOUND)
	ADD_DEFINITIONS(-DUSE_OPENAL)
ENDIF(PKGopenal_FOUND)

ADD_LIBRARY(lugre STATIC ${sourceFiles})

ADD_DEPENDENCIES(lugre lugrelua lugrelib_cadune_tree lugrelib_caelum lugrelib_md5)
