INCLUDES = -I/usr/include -I/usr/local/include/fmodex @OGRE_CFLAGS@ @lua50_CFLAGS@ @lualib50_CFLAGS@ @openal_CFLAGS@ @vorbisfile_CFLAGS@ $(OIS_CFLAGS)

irisogre_LDFLAGS= -L/usr/local/lib -lfmodex -lSDL @OGRE_LIBS@ @lua50_LIBS@ @lualib50_LIBS@ @openal_LIBS@ @alut_LIBS@ @vorbisfile_LIBS@ $(OIS_LIBS)

noinst_PROGRAMS=irisogre

irisogre_SOURCES=\
data.cpp\
data_L.cpp\
legacydata.cpp\
terrain.cpp\
builder.cpp\
builder_L.cpp\
bitmask.cpp\
bitmask_L.cpp\
shell.cpp\
robstring1.2.cpp\
pathsearch.cpp\
game.cpp\
profile.cpp\
listener.cpp\
timer.cpp\
sound.cpp\
sound_fmod.cpp\
sound_openal.cpp\
sound_L.cpp\
net.cpp\
net_L.cpp\
huffman.cpp\
fifo_L.cpp\
ogremanualloader.cpp\
ogremanualloader_L.cpp\
luaxml.cpp\
tinystr.cpp\
tinyxml.cpp\
tinyxmlerror.cpp\
tinyxmlparser.cpp\
robrenderable.cpp\
meshshape.cpp\
granny_L.cpp \
grannyparser.cpp \
grannydump.cpp \
grannyloader_i2.cpp \
grannyogreloader.cpp \
BorderColourClipPaneOverlay.cpp \
ColourClipPaneOverlay.cpp \
ColourClipTextOverlay.cpp \
CompassOverlay.cpp \
RobRenderableOverlay.cpp \
SortedOverlayContainer.cpp \
gfx2D.cpp \
gfx2D_L.cpp \
gfx3D.cpp \
gfx3D_L.cpp \
widget.cpp \
widget_L.cpp \
material_L.cpp \
rendertexture.cpp \
rendertexture_L.cpp \
camera.cpp \
camera_L.cpp \
viewport.cpp \
viewport_L.cpp \
radar.cpp\
radar_L.cpp\
spritemanager.cpp\
spritemanager_L.cpp\
scripting.cpp\
ogrewrapper.cpp\
input.cpp\
main.cpp

