FILE(GLOB sourceFiles RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include" "${iris2_SOURCE_DIR}/lugre/include" ${PKGOGRE_INCLUDE_DIRS})
ADD_DEFINITIONS(${MYGLOBAL_ALL_DEFINES} ${PKGOGRE_CFLAGS_OTHER})

ADD_LIBRARY(lugrelib_cadune_tree STATIC ${sourceFiles})

ADD_DEPENDENCIES(lugrelib_cadune_tree lugrelua)